# monolisa-avatar-generator

./: README.md  generate_avatar.py  pyproject.toml
